# mccli

./: LICENSE  README.md  build_docs.sh  build_pip.sh  doc_requirements.txt  requirements.txt  setup.cfg  setup.py  test_env.sh  upload-download-optimizations.md
doc/: README.md
doc/source/: conf.py  help.rst  index.rst  install.rst  license.rst  overview.rst
doc/source/assets/examples/: MaterialsCommons-Project-Example.html  MaterialsCommons-Project-Example.ipynb  MaterialsCommons-Project-Shell-Example.html  MaterialsCommons-Project-Shell-Example.ipynb
doc/source/manual/: index.rst  jupyter.rst  ls_mkdir_rm_mv.rst  proj_init_clone.rst  remote.rst  up_down_globus.rst
materials_commons/: tables.txt
materials_commons/cli/: __init__.py  cloned_project.py  exceptions.py  file_functions.py  functions.py  globus.py  list_objects.py  parallel.py  parser.py  print_formatter.py  project_file_state.py  sqltable.py  stat_functions.py  tmp_functions.py  tqdm_file.py  tree_functions.py  treedb.py  user_config.py
materials_commons/cli/subcommands/: clone.py  config.py  dataset.py  down.py  expt.py  fetch.py  globus.py  init.py  ls.py  mkdir.py  mv.py  plugin.py  proj.py  pull.py  push.py  remote.py  rm.py  status.py  up.py  versions.py
test/: cli_test_exceptions.py  cli_test_functions.py  cli_test_project.py  test_api.py  test_functions.py  test_mc_dataset.py  test_mc_down.py  test_mc_mkdir.py  test_mc_mv.py  test_mc_proj.py  test_mc_rm.py  test_mc_up.py  test_treecompare_no_cache.py  test_treecompare_with_cache.py  test_treedb.py  test_user_config.py
(+46 files in other folders)
