# copied from https://github.com/pypa/sampleproject/blob/master/setup.cfg
[bdist_wheel]
universal=1

[metadata]
description-file = README.md
license-file = LICENSE

[pycodestyle]
max-line-length = 160

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html
